# 6.8711

./: .gitignore  PROJECT_PLAN.md  README.md  __init__.py  aggregate_panel.py  analysis.py  analyze_overlap_region.py  config.py  experiment.py  generators.py  pipeline.py  pockets.py  pyproject.toml  rebuild_figures.sh  run.sh  run_target_panel.sh  runtime.py  scoring.py  setup.sh
data/2pn7_p2rank/: 2pn7.pdb_predictions.csv  2pn7.pdb_residues.csv  params.txt
data/2pn7_p2rank/visualizations/: 2pn7.pdb.pml
paper/tables/: marginal_vs_conditional_ra.csv  overlap_entropy_correlations.csv  pocket_difficulty.csv  predictability_per_target.csv  predictability_summary.csv  score_summary_by_target_generator.csv  score_variance_by_target_generator.csv  top5pct_enrichment.csv  top5pct_jaccard.csv
